--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,12 @@
 #   http://dev.mysql.com/doc/refman/5.7/en/old-client.html
 #
 default: &default
-  adapter: mysql2
   encoding: utf8
   pool: 5
 
 development:
   <<: *default
+  adapter: mysql2
   database: brew-review_development
   username: root
   password:
@@ -26,6 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
   database: brew-review_test
   username: root
   password:
@@ -52,4 +53,5 @@ test:
 #
 production:
   <<: *default
-  url: <%= ENV['DATABASE_URL'] %>
+  adapter: pg
+  url: <%= ENV['DOKKU_POSTGRES_SILVER_URL'] %>
