--- a/test/fixtures/reviews.yml
+++ b/test/fixtures/reviews.yml
@@ -8,6 +8,8 @@ one:
   bitter: 1
   salty: 1
   rating: 1
+  bean_id: 1
+  user_id: 1
 
 two:
   notes: MyText
@@ -17,3 +19,5 @@ two:
   bitter: 1
   salty: 1
   rating: 1
+  bean_id: 2
+  user_id: 1
