--- a/test/fixtures/beans.yml
+++ b/test/fixtures/beans.yml
@@ -1,11 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  id: 1
   name: MyText
   description: MyText
   roast: MyString
+  roaster_id: 1
 
 two:
+  id: 2
   name: MyText
   description: MyText
   roast: MyString
+  roaster_id: 2
