Fix test db name

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ services:
 script:
   - bin/rake db:test:prepare
 before_install:
-  - mysql -e 'CREATE DATABASE brew-review_test;'
+  - mysql -e 'CREATE DATABASE roast_review_test;'
