--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ development:
 test:
   <<: *default
   adapter: mysql2
-  database: brew-review_test
+  database: roast_review_test
   username: root
   password:
   host: localhost
